rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@snuba-spans-0.snap
---
source: src/processors/mod.rs
description: "{\n  \"event_id\": \"dcc403b73ef548648188bbfa6012e9dc\",\n  \"organization_id\": 69,\n  \"project_id\": 1,\n  \"trace_id\": \"deadbeefdeadbeefdeadbeefdeadbeef\",\n  \"span_id\": \"deadbeefdeadbeef\",\n  \"parent_span_id\": \"deadbeefdeadbeef\",\n  \"segment_id\": \"deadbeefdeadbeef\",\n  \"profile_id\": \"deadbeefdeadbeefdeadbeefdeadbeef\",\n  \"is_segment\": false,\n  \"start_timestamp_ms\": 1691105878720,\n  \"received\": 169110587919.123,\n  \"duration_ms\": 1000,\n  \"exclusive_time_ms\": 1000,\n  \"retention_days\": 90,\n  \"tags\": {\n    \"tag1\": \"value1\",\n    \"tag2\": \"123\",\n    \"tag3\": \"True\"\n  },\n  \"sentry_tags\": {\n    \"http.method\": \"GET\",\n    \"action\": \"GET\",\n    \"domain\": \"targetdomain.tld:targetport\",\n    \"module\": \"http\",\n    \"group\": \"deadbeefdeadbeef\",\n    \"status\": \"ok\",\n    \"system\": \"python\",\n    \"status_code\": \"200\",\n    \"transaction\": \"/organizations/:orgId/issues/\",\n    \"transaction.op\": \"navigation\",\n    \"op\": \"http.client\",\n    \"transaction.method\": \"GET\"\n  },\n  \"measurements\": {\n    \"http.response_content_length\": {\n      \"value\": 100.0,\n      \"unit\": \"byte\"\n    }\n  },\n  \"_metrics_summary\": {\n    \"c:sentry.events.outcomes@none\": [\n      {\n        \"count\": 1,\n        \"max\": 1.0,\n        \"min\": 1.0,\n        \"sum\": 1.0,\n        \"tags\": {\n          \"category\": \"error\",\n          \"environment\": \"unknown\",\n          \"event_type\": \"error\",\n          \"outcome\": \"accepted\",\n          \"release\": \"backend@2af74c237fbd61489a1ccc46650f4f85befaf8b8\",\n          \"topic\": \"outcomes-billing\",\n          \"transaction\": \"sentry.tasks.store.save_event\"\n        }\n      }\n    ],\n    \"c:sentry.events.post_save.normalize.errors@none\": [\n      {\n        \"count\": 1,\n        \"max\": 0.0,\n        \"min\": 0.0,\n        \"sum\": 0.0,\n        \"tags\": {\n          \"environment\": \"unknown\",\n          \"event_type\": \"error\",\n          \"from_relay\": \"False\",\n          \"release\": \"backend@2af74c237fbd61489a1ccc46650f4f85befaf8b8\",\n          \"transaction\": \"sentry.tasks.store.save_event\"\n        }\n      }\n    ]\n  }\n}\n"
expression: snapshot_payload
---
[
  {
    "action": "GET",
    "deleted": 0,
    "description": "",
    "domain": "targetdomain.tld:targetport",
    "duration": 1000,
    "end_ms": 720,
    "end_timestamp": 1691105879,
    "exclusive_time": 1000.0,
    "group": 16045690984833335023,
    "group_raw": 0,
    "is_segment": 0,
    "measurements.key": [
      "http.response_content_length"
    ],
    "measurements.value": [
      100.0
    ],
    "metrics_summary": "{\"c:sentry.events.outcomes@none\":[{\"count\":1,\"max\":1.0,\"min\":1.0,\"sum\":1.0,\"tags\":{\"category\":\"error\",\"environment\":\"unknown\",\"event_type\":\"error\",\"outcome\":\"accepted\",\"release\":\"backend@2af74c237fbd61489a1ccc46650f4f85befaf8b8\",\"topic\":\"outcomes-billing\",\"transaction\":\"sentry.tasks.store.save_event\"}}],\"c:sentry.events.post_save.normalize.errors@none\":[{\"count\":1,\"max\":0.0,\"min\":0.0,\"sum\":0.0,\"tags\":{\"environment\":\"unknown\",\"event_type\":\"error\",\"from_relay\":\"False\",\"release\":\"backend@2af74c237fbd61489a1ccc46650f4f85befaf8b8\",\"transaction\":\"sentry.tasks.store.save_event\"}}]}",
    "module": "http",
    "offset": 1,
    "op": "http.client",
    "parent_span_id": 16045690984833335023,
    "partition": 0,
    "platform": "python",
    "profile_id": "deadbeef-dead-beef-dead-beefdeadbeef",
    "project_id": 1,
    "retention_days": 90,
    "segment_id": 16045690984833335023,
    "segment_name": "/organizations/:orgId/issues/",
    "sentry_tags.key": [
      "action",
      "domain",
      "group",
      "http.method",
      "module",
      "op",
      "status",
      "status_code",
      "system",
      "transaction",
      "transaction.method",
      "transaction.op"
    ],
    "sentry_tags.value": [
      "GET",
      "targetdomain.tld:targetport",
      "deadbeefdeadbeef",
      "GET",
      "http",
      "http.client",
      "ok",
      "200",
      "python",
      "/organizations/:orgId/issues/",
      "GET",
      "navigation"
    ],
    "span_id": 16045690984833335023,
    "span_kind": "",
    "span_status": 0,
    "start_ms": 720,
    "start_timestamp": 1691105878,
    "status": 0,
    "tags.key": [
      "tag1",
      "tag2",
      "tag3"
    ],
    "tags.value": [
      "value1",
      "123",
      "True"
    ],
    "trace_id": "deadbeef-dead-beef-dead-beefdeadbeef",
    "transaction_id": "dcc403b7-3ef5-4864-8188-bbfa6012e9dc",
    "transaction_op": "navigation",
    "user": ""
  }
]
