rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__snuba-metrics-summaries-.snap
---
source: src/processors/mod.rs
expression: diff
---
[
    Change {
        path: "",
        change: RequiredAdd {
            property: "count",
        },
    },
]
