rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__snuba-profile-chunks-.snap
---
source: src/processors/mod.rs
expression: diff
---
[
    Change {
        path: "",
        change: PropertyAdd {
            lhs_additional_properties: true,
            added: "environment",
        },
    },
]
